--- a/chatapp/templates/room.html
+++ b/chatapp/templates/room.html
@@ -1,22 +1,81 @@
 {% include "header.html" %}
-    <title>Chatroom</title>
+    <title>Chat {{roomID}}</title>
 </head>
 
 <body>
-<div class="container">
-    <div class="row" id="chatbody">
+<div class="container border mx-auto" style="max-height:100%">
 
-
-hujaba polnaja
-    </div>
     <div class="row">
+        <div class="col-9 col-md-4 mx-auto" id="messageContainer" style="height:0">
+        </div>
+    </div>
 
 
+
+    <div class="row border-primary"  style="height:calc(100vh - 90px);" >
+        <div class="col-9 border border-secondary px-0" style="max-height:100%" >
+            <div class="container-fluid border" id="chatHistory" style="overflow:auto;max-height:100%;">
+                <div class="row messageTemplate" id="messageTemplate" style="display:none">
+                    <div class="col-2 border nickname">
+                        name
+                    </div>
+                    <div class="col-6 border message">
+                        message
+                    </div>
+                    <div class="col-2 border messageTime">
+                        time
+                    </div>
+                    <div class="col-1 border exchangeRate">
+                        50
+                    </div>
+                    <div class="messageID" style="display:none">
+                        1
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-3 border border-primary">
+            <div class="container-fluid" >
+                list of users
+            </div>
+        </div>
+    </div>
+
+    <div class="row border" style="height:100px">
+        <input id="roomID" type="hidden" value="{{roomID}}">
+        <div class="col-2" id="currentNickname">
+            Nickname
+        </div>
+        <div class="col-8">
+            <input type="text" id="messageBody" class="form-control" placeholder="Enter your message here">
+        </div>
+        <div class="col-2">
+            <button class="btn btn-primary mt-1 " type="submit" id="sendMessageBtn" onclick="send_message()">Send message</button>
+        </div>
     </div>
 
 </div>
 
+
+<div class="border bg-secondary" id="overlay" style="z-index: 100; width:100%; height:100%; position:fixed;opacity:0.9;
+        top:0; left:0;bottom:0;right:0" onclick="">
+    <div class="container text-center">
+        <div class="row">
+            <div class="mx-auto mt-5">
+                <p class="font-weight-bold text-light mx-auto" id="overlay_message"> </p> <br>
+                <div class="input-group">
+
+                    <input type="text" id="nickname" class="form-control" placeholder="Nickname">
+                </div>
+                <div class="mx-auto">
+                    <button class="btn btn-primary mt-1 " type="submit" style="left:0;right:0;" onclick="enter_room()">OK</button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 
-<script src="/static/js/room.js"></script>
+<script src="/chatapp/static/js/room.js"></script>
 </html>
